fix: created GenreController, RatingMpaController, FilmMapper, UserMapper